# monte-carlo-options-pricer

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
notebooks/: demo.ipynb
outputs/tables/: asian_greeks_comparison.csv  asian_option_results.csv  convergence_results.csv  greeks_comparison.csv  moneyness_comparison.csv  pricing_examples.csv  variance_reduction_results.csv
scripts/: generate_report_outputs.py  run_asian_options.py  run_convergence_experiment.py  run_pricer.py
src/mc_options/: __init__.py  asian_options.py  black_scholes.py  experiments.py  implied_volatility.py  market_data.py  monte_carlo.py  plotting.py  utils.py
tests/: test_asian_options.py  test_black_scholes.py  test_implied_volatility.py  test_market_data.py  test_monte_carlo.py  test_put_call_parity.py
